Install chromium and use it emacs to not reveal my tabs

--- a/presentation.org
+++ b/presentation.org
@@ -29,7 +29,7 @@ between repositories and configuration formats over time.
 
 Website: [[https://magit.vc/][https://magit.vc/]]
 
-
+Graphical introduction to git: [[https://learngitbranching.js.org/][Learn Git Branching]]
 
 [ insert live demo here ]
 
