--- a/cfp-36c3-lightningtalk-exwm/presentation.org
+++ b/cfp-36c3-lightningtalk-exwm/presentation.org
@@ -7,7 +7,7 @@
 #+LANGUAGE:  en
 #+LaTeX_CLASS_OPTIONS: [aspectratio=169]
 #+BEAMER_THEME: default
-#+BEAMER_COLOR_THEME: default
+#+BEAMER_COLOR_THEME: whale
 #+OPTIONS:   H:2 num:t toc:nil \n:nil @:t ::t |:t ^:t -:t f:t *:t <:t
 #+OPTIONS:   TeX:t LaTeX:t skip:nil d:nil todo:t pri:nil tags:not-in-toc
 #+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:https://orgmode.org/org-info.js
