--- a/cfp-36c3-lightningtalk-exwm/presentation.org
+++ b/cfp-36c3-lightningtalk-exwm/presentation.org
@@ -3,7 +3,7 @@
 #+EMAIL:     elis@hirwing.se
 #+DESCRIPTION:
 #+KEYWORDS:
-#+DATE:      December 19, 2019
+#+DATE:      December 26, 2019
 #+LANGUAGE:  en
 #+LaTeX_CLASS_OPTIONS: [aspectratio=169]
 #+BEAMER_THEME: default
@@ -20,48 +20,54 @@
  - Emacs and NixOS user
  - Ham radio operator
 
-* EXWM
-** EXWM -- Emacs X11 Window Manager
+* Agenda
+** Agenda
+ - What is this EXWM anyways?
+ - My experience with EXWM.
+ - The future of EXWM.
+
+* EXWM -- What is this EXWM anyways?
+** EXWM -- What is this EXWM anyways?
  - It's just Emacs
 
-** EXWM -- Emacs X11 Window Manager
+** EXWM -- What is this EXWM anyways?
  - It's just Emacs, running full screen
 
-** EXWM -- Emacs X11 Window Manager
+** EXWM -- What is this EXWM anyways?
  - It's just Emacs, running full screen, managing your graphical windows.
 
-** EXWM -- Emacs X11 Window Manager
+** EXWM -- What is this EXWM anyways?
  - It's just Emacs, running full screen, managing your graphical windows.
    - For both good and bad...
 
-** EXWM -- Emacs X11 Window Manager
- - It's just Emacs, running full screen, managing your graphical windows.
- - To begin with it was unimpressive and boring
+* EXWM -- My experience
+** EXWM -- My experience
+ - To begin with it was unimpressive and boring.
 
 ** EXWM -- Freshly started
 [[./exwm-plain.png]]
 
-** EXWM -- Emacs X11 Window Manager
- - It's just Emacs, running full screen, managing your graphical windows.
- - To begin with it was unimpressive and boring
- - Which makes it exciting
+** EXWM -- My experience
+ - To begin with it was unimpressive and boring.
+ - Which makes it exciting.
 
 ** EXWM -- Running graphical applications
 [[./exwm-firefox-term-pavu.png]]
 
-** EXWM -- Emacs X11 Window Manager
- - It's just Emacs, running full screen, managing your graphical windows.
- - To begin with it was unimpressive and boring
- - Which makes it exciting
+** EXWM -- My experience
+ - To begin with it was unimpressive and boring.
+ - Which makes it exciting.
 
 ** EXWM -- Working on code
 [[./exwm-webpaste.png]]
 
-** EXWM -- Emacs X11 Window Manager
- - It's just Emacs, running full screen, managing your graphical windows.
- - To begin with it was unimpressive and boring
- - Which makes it exciting
- - The future of EXWM
+** EXWM -- My experience
+ - To begin with it was unimpressive and boring.
+ - Which makes it exciting.
+
+* EXWM -- The future
+** EXWM -- The future
+ - The future of EXWM.
 
 * Year of the Linux/Emacs Desktop
 ** Year of the Linux Desktop
