[oslo-nixos-meetup-2020-02-22] Move nix snowflake to the agenda slide

--- a/oslo-nixos-meetup-2020-02-22/presentation.org
+++ b/oslo-nixos-meetup-2020-02-22/presentation.org
@@ -25,15 +25,24 @@
  - About 3 years of NixOS experience
  - Has commit/merge access to Nixpkgs
 
-** I'm here to talk about Nix
-[[./nix-snowflake.png]]
-
 * Agenda
 ** Agenda
+*** Agenda
+:PROPERTIES:
+:BEAMER_col: 0.4
+:END:
+
  - Nixpkgs
  - Nix
  - NixOS
  - Nix ecosystem
+
+*** Nix Logo
+:PROPERTIES:
+:BEAMER_col: 0.6
+:END:
+
+[[./nix-snowflake.png]]
 
 * Nixpkgs
 ** Nixpkgs
