[oslo-nixos-meetup-2020-02-22] Add github url

--- a/oslo-nixos-meetup-2020-02-22/presentation.org
+++ b/oslo-nixos-meetup-2020-02-22/presentation.org
@@ -243,6 +243,7 @@ in mkShell {
 ** Contact
  - Mastodon: sa0bse@chaos.social
  - IRC: etu @ most big networks
+ - GitHub: github.com/etu
  - XMPP/Email: etu@failar.nu
  - Website/Blog: https://elis.nu/
  - Callsign: SAØBSE
